# job-hunter

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
companies/: companies.json
src/: conftest.py
src/notifier/: pyproject.toml
src/notifier/notifier/: handler.py
src/notifier/tests/: test_handler.py
src/orchestrator/: pyproject.toml
src/orchestrator/orchestrator/: handler.py
src/orchestrator/tests/: test_handler.py
src/worker/: Dockerfile  pyproject.toml
src/worker/tests/: test_handler.py
src/worker/worker/: handler.py
terraform/: README.md  dynamodb.tf  eventbridge.tf  iam.tf  lambda.tf  main.tf  outputs.tf  providers.tf  sqs.tf  variables.tf
