[project]
name = "notifier"
version = "0.1.0"
description = "Notifier Lambda - queries recent jobs from DynamoDB and sends SES email digest"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37",
    "aws-lambda-powertools>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notifier"]
