[project]
name = "orchestrator"
version = "0.1.0"
description = "Orchestrator Lambda - reads companies table and fans out SQS messages"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]
