[project]
name = "worker"
version = "0.1.0"
description = "Worker Lambda - scrapes careers pages via Strands agent and writes jobs to DynamoDB"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37",
    "strands-agents>=0.1",
    "beautifulsoup4>=4.12",
    "requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
